--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-navigation/bottom-tabs": "^7.3.3",
     "@react-navigation/drawer": "^7.3.2",
     "@react-navigation/native": "^7.0.14",
@@ -19,7 +20,8 @@
     "react-native-gesture-handler": "^2.25.0",
     "react-native-reanimated": "^3.17.2",
     "react-native-safe-area-context": "^5.2.0",
-    "react-native-screens": "^4.9.1"
+    "react-native-screens": "^4.9.1",
+    "react-native-swiper": "^1.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
