--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
     "@types/react-native-vector-icons": "^6.4.18",
+    "iconsax-react-native": "^0.0.8",
     "react": "19.0.0",
     "react-native": "0.78.0",
     "react-native-gesture-handler": "^2.25.0",
     "react-native-reanimated": "^3.17.2",
     "react-native-safe-area-context": "^5.2.0",
     "react-native-screens": "^4.9.1",
+    "react-native-svg": "^15.11.2",
     "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^10.2.0"
   },
